--- a/Invesco/templates/uploads/list_uploads.html
+++ b/Invesco/templates/uploads/list_uploads.html
@@ -71,7 +71,7 @@
                 <tr>
                   <th scope="row">{{ forloop.counter }}</th>
                   <td>{{file.claim_no}}</td>
-                  <td>{{file.title}}</td>
+                  <td>{{file.claim_no.insured}}</td>
                   <td><a href="{{file.file.url}}"><i class="fa fa-download fa-lg"></i></a></td>
                   <td><a href="{{file.file.url}}"><i class="fa fa-eye fa-lg"></i></a></td>
                 </tr>
