--- a/Invesco/templates/index.html
+++ b/Invesco/templates/index.html
@@ -43,7 +43,7 @@
   </div>
   <br>
   <section> 
-    <div class="alert alert-succes" role="alert">
+    <div class="alert alert-succes" role="alert" id="alert">
     {% if messages %}
       {% for message in messages %}
         <p>{{message}}</p>
@@ -90,7 +90,7 @@
               <th scope="col">Plate No:</th>
               <th scope="col">Details of Loss</th>
               <th scope="col">Date of Loss</th>
-              <th scope="col">Date of submssion</th>
+              <th scope="col">Date Received</th>
             </tr>
           </thead>
           <tbody>
@@ -101,8 +101,8 @@
               <td>{{claims.insured}}</td>
               <td>{{claims.plate_no}}</td>
               <td>{{claims.details_loss}}</td>
-              <td>{{claims.date_loss|date:"d M Y"}}</td>
-              <td>{{claims.date_received}}</td>
+              <td>{{claims.date_loss|date:"d/M/Y"}}</td>
+              <td>{{claims.date_received|date:"d/M/Y"}}</td>
             </tr>
             {% endfor %}
         </tbody>    
@@ -173,6 +173,15 @@
       });
   });
   </script>
+  <script>
+    let alert = document.getElementById("alert")
+    const myTimeout = setTimeout(alert, 5000);
+
+    function myStopFunction() {
+      clearTimeout(myTimeout);
+    }
+  </script>
+
 
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
