--- a/Invesco/static/css/index.css
+++ b/Invesco/static/css/index.css
@@ -35,7 +35,7 @@ thead{
 .wrapper{
     height: 40px;
     width: 100%;
-    background-color: black;
+    background-color: #2858a6;
     color: white;
     display: flex;
 }
