--- a/Invesco/templates/library.html
+++ b/Invesco/templates/library.html
@@ -106,7 +106,7 @@
             <li>
                 <div class="iocn-link">
                     <a href="#">
-                         <i class="fas fa-landmark"></i>
+                         <i class="fas fa-paperclip"></i>
 
                         <span class="link_name">WARRANTS</span>
                     </a>
