--- a/Invesco/templates/uploads/list_uploads.html
+++ b/Invesco/templates/uploads/list_uploads.html
@@ -13,10 +13,158 @@
     <link rel="icon" type="image/png" sizes="32x32" href="{% static 'images/favicon-32x32.png' %}">
     <link rel="icon" type="image/png" sizes="16x16" href="{% static 'images/favicon-16x16.png' %}">
     <link rel="manifest" href="{% static 'images/site.webmanifest' %}">
+    <link rel="stylesheet" href="{% static 'css/library.css' %}">
     <link rel="stylesheet" href="{% static 'css/uploads.css' %}">
     <title>Invesco | Files</title>
 </head>
 <body>
+  <section class="navigation">
+    <div class="sidebar close" id="sidebar">
+        <div class="logo-details close">
+              <img src="{% static 'images/logo.jpg' %}" width="78px">
+        </div>
+        <ul class="nav-links">
+            <li>
+                <div class="iocn-link">
+                    <a href="#">
+                       <i class="fas fa-eye fa-lg"></i>
+                        <span class="link_name">SEARCH</span>
+                    </a>
+                    <i class='bx bxs-chevron-down arrow'></i>
+                </div>
+                <ul class="sub-menu">
+                    <li><a href="{% url 'invescofiles:index' %}">VIEW SPECIFIC RECORD</a></li>
+                </ul>
+            </li>
+
+            .....
+            <li>
+                <div class="iocn-link">
+                    <a href="#">
+                       <i class="fas fa-book-reader"></i>
+                        <span class="link_name">HEARING</span>
+                    </a>
+                    <i class='bx bxs-chevron-down arrow'></i>
+                </div>
+                <ul class="sub-menu">
+                    <li><a class="link_name" href="#">HEARING</a></li>
+                    <li><a href="{% url 'invescofiles:hearing-list' %}">HEARING Records</a></li>
+                </ul>
+            </li>
+            <li>
+                <div class="iocn-link">
+                    <a href="#">
+                        <i class="fas fa-gavel"></i>
+
+                        <span class="link_name">JUDGEMENT</span>
+                    </a>
+                    <i class='bx bxs-chevron-down arrow'></i>
+                </div>
+                <ul class="sub-menu">
+                    <li><a class="link_name" href="#">JUDGEMENT</a></li>
+                    <li><a href="{% url 'invescofiles:judgement-list' %}">JUDGEMENT RECORDS</a></li>
+                </ul>
+            </li>
+            <li>
+                <div class="iocn-link">
+                    <a href="#">
+                         <i class="fa fa-balance-scale" aria-hidden="true"></i>
+                        <span class="link_name">OUT OF COURT</span>
+                    </a>
+                    <i class='bx bxs-chevron-down arrow'></i>
+                </div>
+                <ul class="sub-menu">
+                    <li><a class="link_name" href="#">OUT OF COURT</a></li>
+                    <li><a href="{% url 'invescofiles:outofcourt-list' %}">OUT OF COURT RECORDS</a></li>
+                </ul>
+            </li>
+            <li>
+                <div class="iocn-link">
+                    <a href="#">
+                         <i class="fas fa-file"></i>
+
+                        <span class="link_name">SUMMON</span>
+                    </a>
+                    <i class='bx bxs-chevron-down arrow'></i>
+                </div>
+                <ul class="sub-menu">
+                    <li><a class="link_name" href="#">SUMMON</a></li>
+                    <li><a href="{% url 'invescofiles:list-summons' %}">SUMMON RECORDS</a></li>
+                </ul>
+            </li>
+            <li>
+                <div class="iocn-link">
+                    <a href="#">
+                         <i class="fas fa-landmark"></i>
+
+                        <span class="link_name">STATUTORY NOTICE</span>
+                    </a>
+                    <i class='bx bxs-chevron-down arrow'></i>
+                </div>
+                <ul class="sub-menu">
+                    <li><a class="link_name" href="#">STATUTORY NOTICE</a></li>
+                    <li><a href="{% url 'invescofiles:statutory-list' %}">STATUTORY NOTICE</a></li>
+                </ul>
+            </li>
+            <li>
+                <div class="iocn-link">
+                    <a href="#">
+                         <i class="fas fa-paperclip"></i>
+
+                        <span class="link_name">WARRANTS</span>
+                    </a>
+                    <i class='bx bxs-chevron-down arrow'></i>
+                </div>
+                <ul class="sub-menu">
+                    <li><a class="link_name" href="#">WARRANTS</a></li>
+                    <li><a href="{% url 'invescofiles:warrant-list' %}">WARRANTS</a></li>
+                </ul>
+            </li>
+            <li>
+                <div class="iocn-link">
+                    <a href="#">
+                        <i class="fa fa-cloud-upload" aria-hidden="true"></i>
+                        <span class="link_name">UPLOADS</span>
+                    </a>
+                    <i class='bx bxs-chevron-down arrow'></i>
+                </div>
+                <ul class="sub-menu">
+                    <li><a class="link_name" href="#">UPLOADS</a></li>
+                    <li><a href="{% url 'invescofiles:upload-list' %}">UPLOADED FILES</a></li>
+                </ul>
+            </li>
+
+             <li>
+                <div class="iocn-link">
+                    <a href="#">
+                      <i class='bx bxs-notepad'></i>
+
+                        <span class="link_name">WARRANTS</span>
+                    </a>
+                    <i class='bx bxs-chevron-down arrow'></i>
+                </div>
+                <ul class="sub-menu">
+                    <li><a class="link_name" href="#">WARRANTS</a></li>
+                    <li><a href="{% url 'invescofiles:warrant-list' %}">WARRANTS</a></li>
+                </ul>
+            </li>
+
+             <li>
+                <div class="iocn-link">
+                    <a href="#">
+                        <i class='bx bx-book-bookmark'></i>
+                        <span class="link_name">STATUTORY</span>
+                    </a>
+                    <i class='bx bxs-chevron-down arrow'></i>
+                </div>
+                <ul class="sub-menu">
+                    <li><a class="link_name" href="#">STATUTORY</a></li>
+                    <li><a href="{% url 'invescofiles:statutory-list' %}">STATUTORY </a></li>
+                </ul>
+            </li>
+        </ul>
+    </div>
+    
   <div class="row" style="background-color: #F7F8FA;">
     <button class="button-22" role="button"><a href="{% url 'invescofiles:library' %}">Back</a></button>
   </div>
@@ -29,9 +177,7 @@
             {{ filesfilters.form.claim_no.label_tag }}
             {% render_field filesfilters.form.claim_no class="form-control" %}
           </div>
-          <div class="form-group col-sm-4 col-md-3">
-            {{ filesfilters.form.title.label_tag }}
-            {% render_field filesfilters.form.title class="form-control" %}
+           
           </div>
          </div>
          <button class="btn btn-primary" type="submit" value="reset">clear</button>
@@ -80,5 +226,22 @@
               </tbody>
           </table>
     </section>
+    <script>
+      let arrow = document.querySelectorAll(".arrow");
+      for (var i = 0; i < arrow.length; i++) {
+          arrow[i].addEventListener("click", (e) => {
+              let arrowParent = e.target.parentElement.parentElement; //selecting main parent of arrow
+              arrowParent.classList.toggle("showMenu");
+          });
+      }
+
+      let sidebar = document.querySelector(".sidebar");
+      let sidebarBtn = document.querySelector(".bx-menu");
+      console.log(sidebarBtn);
+      sidebarBtn.addEventListener("click", () => {
+          sidebar.classList.toggle("close");
+      });
+
+  </script>
 </body>
 </html>
